# armv7-embedded-rust-log

./: Cargo.toml  README.adoc  build.rs
.cargo/: config
linker/: log.x.in
src/: lib.rs
